Auth fixes and docs updates
